Use dockerized container again. Dont build and test in one run